[package]
name = "zhneeshyx"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
image = "0.23"
cgmath = "0.18"

env_logger = "0.9"
log = "0.4"

wgpu = "0.11"
pollster = "0.2"
# fast way to map bytes
bytemuck = { version = "1.4", features = [ "derive" ] }
# lightweight obj loader
tobj = "3.0"
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"